Добавлены удаляемые слова

--- a/HW9/VK_data.ipynb
+++ b/HW9/VK_data.ipynb
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +315,7 @@
        "4             1  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -553,7 +553,7 @@
        "27703             2  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -564,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -767,7 +767,7 @@
        "15361             0  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -847,7 +847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -859,13 +859,19 @@
     "\n",
     "stopwords_all = stopwords_en + stopwords_ru + stopwords_ge\n",
     "\n",
-    "stopwords_all = stopwords_all + [u'https', u'vk', u'com', u'id', u'ph', u'др', u'св', u'ff', u'la', \\\n",
-    "                                 u'de', u'pa', u'bb', u'p', u'ул', u'ин', u'http', u'ru', u'md', u'x']"
+    "# дополнительные буквосочетания, которые будем удалять из текстов\n",
+    "additional_stopwords = \\\n",
+    "[u'https', u'vk', u'com', u'id', u'ph', u'др', u'св', u'ff', u'la', \\\n",
+    " u'de', u'pa', u'bb', u'p', u'ул', u'ин', u'http', u'ru', u'md', u'x', \\\n",
+    " u'ft', u'сб', u'b', u'к', u'www', u'youtube', u'ка', u'v', u'g', u'goo', u'gl', \\\n",
+    " u'eu', u'u', u'te', u'un', u'вк', u'w', u'ly', u'su', u'bu', u'vl', u'эт', u'r', u'e']\n",
+    "\n",
+    "stopwords_all = stopwords_all + additional_stopwords"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -888,6 +894,8 @@
     "    text = re.sub(ur'\\d+', '', text, flags=re.U)\n",
     "    # удалим два или более пробелов\n",
     "    text = re.sub(ur'[ ]{2,}', '', text, flags=re.U)\n",
+    "    # удалим подчёркивания\n",
+    "    text = re.sub(ur'[_]+', '', text, flags=re.U)\n",
     "    # разбиение по пробелам и удаление стоп-слов\n",
     "    tokenized = [w for w in text.split() if w not in stopwords_all]\n",
     "    tokenized = [re.sub(ur\"\\W\", \"\", w, flags=re.U) for w in tokenized]\n",
@@ -898,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -915,6 +923,33 @@
     "    make_pipeline(FunctionTransformer(get_categorial_cols, validate=False), MinMaxScaler()),\n",
     "    make_pipeline(FunctionTransformer(get_posts_col, validate=False)), CountVectorizer(tokenizer=my_tokenizer)\n",
     "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "анастасий\n",
+      "серый\n",
+      "anastasiya\n",
+      "serayaхерсон\n",
+      "анастасий\n",
+      "серый\n",
+      "anastasiya\n",
+      "seraya\n",
+      "харьковтаять\n",
+      "несвятой\n"
+     ]
+    }
+   ],
+   "source": [
+    "for token in my_tokenizer(df_train['posts'][7777]):\n",
+    "    print(token)"
    ]
   },
   {
@@ -1019,13 +1054,13 @@
     {
      "ename": "NameError",
      "evalue": "name 'X_train_bag_of_words' is not defined",
+     "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
       "\u001b[0;32m<ipython-input-14-901ff7c26da5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0mX_train_categorial\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msparse\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcsr_matrix\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcategorial_cols_scale\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m \u001b[0mX_train\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mhstack\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mX_train_sex\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX_train_categorial\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX_train_bag_of_words\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;32mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train_sex\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mNameError\u001b[0m: name 'X_train_bag_of_words' is not defined"
-     ],
-     "output_type": "error"
+     ]
     }
    ],
    "source": [
