Добавлен проект по обучение нейронной сети распозаванию речи

--- a/HW12/HW12.ipynb
+++ b/HW12/HW12.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -45,14 +45,14 @@
       "memory_limit: 268435456\n",
       "locality {\n",
       "}\n",
-      "incarnation: 2481697876564737039\n",
+      "incarnation: 8762077033358161920\n",
       ", name: \"/device:GPU:0\"\n",
       "device_type: \"GPU\"\n",
-      "memory_limit: 7091198362\n",
+      "memory_limit: 6872979866\n",
       "locality {\n",
       "  bus_id: 1\n",
       "}\n",
-      "incarnation: 15656277681459650500\n",
+      "incarnation: 9624742381638380363\n",
       "physical_device_desc: \"device: 0, name: GeForce GTX 1070, pci bus id: 0000:01:00.0, compute capability: 6.1\"\n",
       "]\n"
      ]
@@ -423,13 +423,7 @@
       "48000/48000 [==============================] - 2s 33us/step - loss: 0.2294 - acc: 0.9363 - val_loss: 0.2629 - val_acc: 0.9313\n",
       "Epoch 58/200\n",
       "48000/48000 [==============================] - 2s 32us/step - loss: 0.2291 - acc: 0.9362 - val_loss: 0.2628 - val_acc: 0.9313\n",
-      "Epoch 59/200\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 59/200\n",
       "48000/48000 [==============================] - 2s 32us/step - loss: 0.2286 - acc: 0.9364 - val_loss: 0.2640 - val_acc: 0.9310\n",
       "Epoch 60/200\n",
       "48000/48000 [==============================] - 2s 36us/step - loss: 0.2288 - acc: 0.9370 - val_loss: 0.2636 - val_acc: 0.9309\n",
@@ -669,13 +663,7 @@
       "48000/48000 [==============================] - 1s 24us/step - loss: 0.2133 - acc: 0.9407 - val_loss: 0.2788 - val_acc: 0.9288\n",
       "Epoch 175/200\n",
       "48000/48000 [==============================] - 1s 24us/step - loss: 0.2133 - acc: 0.9405 - val_loss: 0.2807 - val_acc: 0.9282\n",
-      "Epoch 176/200\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 176/200\n",
       "48000/48000 [==============================] - 1s 24us/step - loss: 0.2131 - acc: 0.9401 - val_loss: 0.2824 - val_acc: 0.9267\n",
       "Epoch 177/200\n",
       "48000/48000 [==============================] - 1s 24us/step - loss: 0.2132 - acc: 0.9400 - val_loss: 0.2819 - val_acc: 0.9272\n",
